routes and methods for customer & store

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "mon": "npx nodemon bin/www.js",
+    "testdb": "npx sequelize-cli --env=test db:drop && npx sequelize-cli --env=test db:create && npx sequelize-cli --env=test db:migrate && npx sequelize-cli --env=test db:seed:all",
+    "test": "npx jest customer.test.js --detectOpenHandles --forceExit --runInBand"
   },
   "repository": {
     "type": "git",
@@ -19,12 +21,16 @@
   "homepage": "https://github.com/imramzani/LaundFazzBE#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
     "sequelize": "^6.18.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "sequelize-cli": "^6.4.1"
   }
 }
