--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PASSWORD=b123b123
 SECRET=rahasia
+TWILIO_ACCOUNT_SID=AC3a578241197a33b679b14e4c3f2ed82c
+TWILIO_AUTH_TOKEN=039ab11107549314a36757eccc98be53
