--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
     "pg": "^8.7.3",
-    "sequelize": "^6.18.0"
+    "sequelize": "^6.18.0",
+    "twilio": "^3.76.1"
   },
   "devDependencies": {
     "sequelize-cli": "^6.4.1"
