test register login

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "mon": "npx nodemon bin/www.js",
+    "dev": "npx nodemon bin/www.js",
     "testdb": "npx sequelize-cli --env=test db:drop && npx sequelize-cli --env=test db:create && npx sequelize-cli --env=test db:migrate && npx sequelize-cli --env=test db:seed:all",
     "test": "npx jest customer.test.js --detectOpenHandles --forceExit --runInBand"
   },
