--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.3",
+    "nodemailer-express-handlebars": "^5.0.0",
     "pg": "^8.7.3",
     "sequelize": "^6.18.0"
   },
